@@ -90,11 +90,11 @@ public class CommentsService {
             throw new MovieNotFoundException(Movie.class, "id");
         }
 
-        List<Comment> comments = commentRepository.findByMovie(movie.get());
+        List<Comment> comments = commentRepository.findByMovieOrderByDateDesc(movie.get());
         return comments.stream()
                 .map(comment -> new CommentDTO(comment.getId(), comment.getMovie().getId(),
                         comment.getUser().getId(), mapper.map(comment.getUser(), UserObj.class),
-                        comment.getContent(), comment.getDate())).toList();
+                        comment.getContent(), comment.getDate())).collect(Collectors.toList());
     }
 
     public List<CommentDTO> getCommentsByMovieIdAndUserId(Long movieId, Long userId){
@@ -108,10 +108,10 @@ public class CommentsService {
             throw new UserNotFoundException("User not found for this id.");
         }
 
-        List<Comment> comments = commentRepository.findByUserAndMovie(user.get(), movie.get());
+        List<Comment> comments = commentRepository.findByUserAndMovieOrderByDateDesc(user.get(), movie.get());
         return comments.stream()
                 .map(comment -> new CommentDTO(comment.getId(), comment.getMovie().getId(),
                         comment.getUser().getId(), mapper.map(comment.getUser(), UserObj.class),
-                        comment.getContent(), comment.getDate())).toList();
+                        comment.getContent(), comment.getDate())).collect(Collectors.toList());
     }
 }
